<resources>
    <string name="app_name">Drama Short</string>

    <string name="default_web_client_id">373952562076-7ginlql7ti0itk9pb3be4q0i5c3ej96k.apps.googleusercontent.com</string>
    <!--    <string name="default_web_client_id">373952562076-ksk8sfog9j99eak8m6h5avsfh4plkone.apps.googleusercontent.com</string>-->

    <string name="home">Home</string>
    <string name="for_you">For you</string>
    <string name="my_list">My List</string>
    <string name="rewards">Rewards</string>
    <string name="profile">Profile</string>
    <string name="earn_rewards">Earn Rewards</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="my_coupons">My Coupons</string>
    <string name="feedback">Feedback</string>
    <string name="language">Language</string>
    <string name="setting">Setting</string>
    <string name="about_us">About Us</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="sigh_out">Sigh Out</string>
    <string name="rate_us">Rate Us</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="no_items">No items</string>
    <string name="no_duplicate_files">No files here.</string>
    <string name="my_wallet">My Wallet</string>
    <string name="transaction_history">Transaction History</string>
    <string name="episode_unlocked">Episode Unlocked</string>
    <string name="episode_auto_unlock">Episode on auto unlock</string>
    <string name="reward_coin_history">Reward Coin History</string>
    <string name="official_website">https//:www.google.com</string>
    <string name="content_collaboration">Content Collaboration</string>
    <string name="follow_us_on_instagram">Follow Us on Instagram</string>
    <string name="join_us">Join Us</string>
    <string name="rewards_coins">Rewards Coins</string>
    <string name="subscribe">Subscribe</string>
    <string name="refill">Refill</string>
    <string name="store">Store</string>
    <string name="search_history">search History</string>
    <string name="earn_coins">Earn Coins</string>
    <string name="bind_email">Bind Email</string>
    <string name="change_email_address">Change email address</string>
    <string name="ok">Ok</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="verify">Verify</string>
    <string name="term_condition"><![CDATA[Term & Condition]]></string>
    <string name="your_opinion_n_matter_for_us">Your opinion matters to us!</string>
    <string name="feedback_msg_desc1">We would like your review to improve our application\'s \n quality and serve you better as per your \n expectations.</string>
    <string name="feedback_submit_btn">Submit</string>
    <string name="feedback_submit_hint">Please tell us your opinion as a feedback for this app so we can locate and try to solve your problem faster</string>
    <string name="no_thanks">No thanks</string>
    <string name="feedback_send_us">Send us</string>
    <string name="feedback_your_feedback">Share Your Feedback</string>
    <string name="feedback_feedback_improve">Your opinion matters! Tell us what you think so we can keep improving.</string>
    <string name="feedback_what_category_does_your_request_fall_under">Under what category does your request fall?</string>
    <string name="feedback_please_select">Please select…</string>
    <string name="feedback_what_type_of_feature_do_you_require">What feature would you like to see?</string>
    <string name="feedback_typing_something_here">Typing Something here....</string>
    <string name="feedback_upload_reference_images_optional">Upload Reference images (Optional)</string>
    <string name="feedback_upload_images">Upload Images</string>
    <string name="submit">Submit</string>
    <!--    <string name="facebook_app_id">1226052828571345</string>-->
    <string name="facebook_app_id">709754541676544</string>
</resources>