<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_24sdp"

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/_2sdp">


        <LinearLayout
            android:id="@+id/ll_earn_rewards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            >

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"

                android:src="@drawable/ic_arrow_left"
                app:tint="@color/whiteMy" />

            <TextView
                style="@style/BodySmallMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:text="@string/feedback"
                android:textAlignment="textStart"
                android:textColor="@color/whiteMy"
                android:textSize="@dimen/_14sdp" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_rewards"
                android:visibility="invisible"
                app:tint="@color/whiteMy" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.core.widget.NestedScrollView
        android:paddingBottom="@dimen/_5sdp"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolBar">

            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                android:textColor="@color/whiteMy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:text="@string/feedback_your_feedback"
                android:includeFontPadding="false"
                android:fontFamily="@font/ginto_normal_medium"
                android:layout_marginHorizontal="@dimen/_15sdp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/whiteMy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:text="@string/feedback_feedback_improve"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginVertical="@dimen/_3sdp"
                style="@style/BodySmallRegular"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/feedbackTypeRecycler"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:clipToPadding="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:overScrollMode="never"
                android:paddingHorizontal="@dimen/_5sdp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/whiteMy"
                android:id="@+id/feedbackSubCatTitle"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:text="@string/feedback_what_category_does_your_request_fall_under"
                android:layout_marginHorizontal="@dimen/_15sdp"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/whiteMy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:text="@string/feedback_what_type_of_feature_do_you_require"
                android:layout_marginHorizontal="@dimen/_15sdp"

                />
            <androidx.appcompat.widget.AppCompatEditText
                android:textColor="@color/whiteMy"
                android:textColorHint="@color/gray"
                android:gravity="top"
                android:id="@+id/userFeedback"
                android:background="@drawable/ic_feedback_rectangle_bg"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingRight="@dimen/_20sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:hint="@string/feedback_typing_something_here"
                android:lines="4"
                android:lineSpacingExtra="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_15sdp"
                style="@style/BodySmallRegular"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/whiteMy"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:text="@string/feedback_upload_reference_images_optional"
                android:layout_marginHorizontal="@dimen/_15sdp"
                style="@style/BodySmallRegular"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:gravity="center"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:id="@+id/uploadImage"
                android:background="@drawable/item_feedback_upload_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:paddingHorizontal="@dimen/_18sdp"
                android:paddingVertical="@dimen/_9sdp">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imagePreview"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_upload_image"
                    android:tint="@color/whiteMy"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:textColor="@color/whiteMy"
                    android:gravity="start"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_upload_images"
                    style="@style/BodySmallRegular"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/imagePickerSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/feedbackRecycler"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_8sdp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:listitem="@layout/item_image_feedback"
                    app:spanCount="5"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/whiteMy"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/btnSubmit"
                android:background="@drawable/ic_btn_color_shadow"
                android:paddingLeft="@dimen/_80sdp"
                android:paddingTop="@dimen/_12sdp"
                android:paddingRight="@dimen/_80sdp"
                android:paddingBottom="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/submit"
                android:paddingHorizontal="@dimen/_80sdp"
                android:paddingVertical="@dimen/_12sdp"
                style="@style/BodyLargeSemiBold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
    <RelativeLayout
        android:id="@+id/progressBar"
        android:focusable="true"
        android:visibility="gone"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</RelativeLayout>
