<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_10sdp"

    >


    <LinearLayout
        android:id="@+id/ll_earn_rewards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_10sdp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"

            android:src="@drawable/ic_arrow_left"
            app:tint="@color/whiteMy" />

        <TextView
            style="@style/BodySmallMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:text="@string/setting"
            android:textAlignment="textStart"
            android:textColor="@color/whiteMy"
            android:textSize="@dimen/_14sdp" />

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_rewards"
            android:visibility="invisible"
            app:tint="@color/whiteMy" />
    </LinearLayout>


    <include
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/progress_layout"
        android:visibility="gone"
        />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius10"
                android:backgroundTint="#111111"
                android:backgroundTintMode="src_in"
                android:gravity="center_vertical"
                android:orientation="vertical">



            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_delete_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/radius10"
                android:backgroundTint="@color/bg_color_light"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_15sdp">


                <TextView
                    style="@style/BodySmallMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_delete_acount"
                    android:drawablePadding="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/delete_account"
                    android:textColor="@color/whiteMy"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/ic_arrow_right"
                    app:tint="#AAAAAA" />

            </LinearLayout>

            <TextView
                android:id="@+id/ll_sigh_out"
                style="@style/BodySmallMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:drawableStart="@drawable/ic_sigh_out"
                android:background="@drawable/radius10"
                android:backgroundTint="@color/bg_color_light"
                android:drawablePadding="@dimen/_5sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_15sdp"
                android:text="@string/sigh_out"
                android:textColor="@color/Red"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>




</LinearLayout>

