<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/_24sdp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_10sdp">


        <LinearLayout
            android:id="@+id/ll_earn_rewards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_10sdp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"

                android:src="@drawable/ic_arrow_left"
                app:tint="@color/whiteMy" />

            <TextView
                style="@style/BodySmallMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:text="@string/my_wallet"
                android:textColor="@color/whiteMy"
                android:textSize="@dimen/_14sdp" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_rewards"
                android:visibility="invisible"
                app:tint="@color/whiteMy" />
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_subScription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_btn_wallet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
                app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
                app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
                app:layout_constraintTop_toTopOf="@+id/appCompatImageView">


                <LinearLayout
                    android:id="@+id/ll_wallet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_10sdp"

                    >

                    <TextView
                        android:id="@+id/walletBalance"
                        style="@style/BodyLargeBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/_5sdp"
                        android:text="0"
                        android:textColor="@color/whiteMy"
                        android:textSize="@dimen/_25sdp"
                        app:drawableStartCompat="@drawable/ic_coin" />


                    <TextView
                        android:id="@+id/coinBalance"
                        style="@style/BodySmallMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="Coin 0 | Reward Coin 0"
                        android:textColor="@color/whiteMy"
                        android:textSize="@dimen/_12sdp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/refill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/ic_btn_color"
                    android:paddingHorizontal="@dimen/_30sdp"
                    android:paddingVertical="@dimen/_5sdp"
                    android:src="@drawable/ic_arrow_left"
                    android:text="Refill"
                    android:textAlignment="center"
                    android:textColor="@color/whiteMy"
                    android:textSize="@dimen/_15sdp"

                    />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTintMode="src_in"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll_transaction_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius10"
                android:backgroundTint="@color/bg_color_light"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_15sdp"

                >


                <TextView
                    style="@style/BodySmallMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/transaction_history"
                    android:textColor="@color/whiteMy"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/ic_arrow_left"
                    app:tint="#AAAAAA" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_episode_unlocked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/radius10"
                android:backgroundTint="@color/bg_color_light"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_15sdp"

                >


                <TextView
                    style="@style/BodySmallMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/episode_unlocked"
                    android:textColor="@color/whiteMy"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/ic_arrow_left"
                    app:tint="#AAAAAA" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_episode_auto_unlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/radius10"
                android:backgroundTint="@color/bg_color_light"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_15sdp">


                <TextView
                    style="@style/BodySmallMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/episode_auto_unlock"
                    android:textColor="@color/whiteMy"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/ic_arrow_left"
                    app:tint="#AAAAAA" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_reward_coin_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/radius10"
                android:backgroundTint="@color/bg_color_light"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_15sdp">


                <TextView
                    style="@style/BodySmallMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:text="@string/reward_coin_history"
                    android:textColor="@color/whiteMy"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="@dimen/_10sdp"
                    android:src="@drawable/ic_arrow_left"
                    app:tint="#AAAAAA" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>
